# route-optimization

./: .gitignore  CLAUDE.md  README.md  convert_to_png.py  generate_od_matrix.py  main.py  main_runner.py  methodology.md  pyproject.toml
config/: model-params.yaml
data/: locations.jsonl  subway_locations.json  subway_locations.jsonl  subway_locations.jsonl.backup
output/: aggregate-report.jsonl  aggregate-summary.jsonl  aggregate_report.html  aggregate_summary.jsonl  itinerary.jsonl  multi_zone_summary.jsonl  optimization_result.json
output/zones/: zone_000_complete_report.json  zone_000_result.json  zone_001_result.json  zone_002_result.json  zone_003_result.json  zone_004_result.json  zone_005_result.json  zone_006_result.json  zone_007_result.json  zone_008_result.json  zone_009_result.json  zone_010_result.json  zone_011_result.json  zone_012_result.json  zone_013_result.json  zone_014_result.json  zone_015_result.json  zone_016_result.json  zone_017_result.json  zone_018_result.json  zone_019_result.json  zone_020_result.json  zone_021_result.json  zone_022_result.json  zone_023_result.json  zone_024_result.json  zone_025_result.json  zone_026_result.json  zone_027_result.json
src/: __init__.py
src/core/: _1_extraction.py  _2_preprocessing.py  _3_0_optimization.py  _3_1_optimization_primary_day_assignment.py  _3_2_optimization_secondary_day_clustering.py  _3_3_optimization_route_optimization.py  _3_4_optimization_cluster_balancing.py  _3_5_optimization_detailed_routing.py  _4_reporting.py  _5_loading.py  __init__.py  main_optimizer.py  optimize.py  report.py  stage0_data_ingestion.py  stage1_assignment.py  stage2_routing.py  stage4_route_optimization.py  stage5_reporting.py  stage6_orchestrator.py
streamlit/: README.md  aggregate_report.py  aggregate_summary.py  app.py  launch.sh  requirements.txt  run.py  test_app.py  utils.py  zone_details.py  zone_summary.py
tests/: test_main_optimizer.py  test_od_matrix.py  test_osrm.py  test_osrm_server.py  test_stage1.py  test_stage2.py  test_timeout.py  test_timeout_simulation.py
(+11 files in other folders)
