[project]
name = "route-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.0.0",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
]

[project.scripts]
optimize = "main_runner:main"
view-routes = "python -m webbrowser output/routes_overview.html"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.uv]
dev-dependencies = []
